removed notes section, updated footer; mostly just doing a test commit to make sure my workspace is set up properly

--- a/style.css
+++ b/style.css
@@ -474,12 +474,12 @@ input[placeholder], [placeholder], *[placeholder] {
     width: 100%;
 }
 .footer p {
-	text-align:  center;
-
+	text-align:  right;
+	color: #cccccc;
 	font-family: 'Poppins', sans-serif;
 }
 .footer p a {
- color: #8AB839;
+ color: #b0b0b0;
  font-family: 'Poppins', sans-serif;
 }
 
