--- a/style.css
+++ b/style.css
@@ -187,12 +187,12 @@
 	text-decoration: none;
 	color: #8ab839;
 }
-.features
+.donate
 {
 	background: #8ab839;
 	padding: 60px 0px;
 }
-.features-text
+.donate-text
 {
 	font-family: 'Roboto', sans-serif;
 	font-weight: 700;
@@ -200,7 +200,7 @@
 	margin-bottom:30px;
 	margin-top:30px;
 }
-h2.features-text::after {
+h2.donate-text::after {
     display: block;
     margin: 17px auto 0px;
     width: 80px;
@@ -292,7 +292,7 @@ font-size: 17px;
 .work-list{
 	padding: 60px 0px;
 }
-.portfolio-text
+.photos-text
 {
 	font-family: 'Roboto', sans-serif;
 	font-weight: 700;
@@ -300,7 +300,7 @@ font-size: 17px;
 	margin-bottom:30px;
 	margin-top:30px;
 }
-h2.portfolio-text::after {
+h2.photos-text::after {
     display: block;
     margin: 17px auto 0px;
     width: 80px;
@@ -427,6 +427,22 @@ h2.portfolio-text::after {
 	padding: 60px 0px;
 	float: left;
 	width: 100%;
+}
+.contact-text
+{
+	font-family: 'Roboto', sans-serif;
+	font-weight: 700;
+	letter-spacing: 5px;
+	margin-bottom:30px;
+	margin-top:30px;
+}
+h2.contact-text::after {
+    display: block;
+    margin: 17px auto 0px;
+    width: 80px;
+    height: 1px;
+    background: #8ab839 none repeat scroll 0% 0%;
+    content: "";
 }
 .contact-form, .address-space
 {
