first attempt at photos section

--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ padding: 13px 0px;
 width: 100% !important;
 font-size: 17px;
 }
-.work-list{
+.photos-list{
 	padding: 60px 0px;
 }
 .photos-text
@@ -305,14 +305,14 @@ h2.photos-text::after {
     margin: 17px auto 0px;
     width: 80px;
     height: 1px;
-    background: #8ab839 none repeat scroll 0% 0%;
+    background: #000 none repeat scroll 0% 0%;
     content: "";
 }
-.work-list a .featured-img
+.photos-list a .featured-img
 {
 	width: 100%;
 }
-.work-list a .featured-img img
+.photos-list a .featured-img img
 {
 	width: 100%;
 	height: 200px;
@@ -347,7 +347,7 @@ h2.photos-text::after {
 {	display: block;
 	color: #212A3F;
 }
-.work-list a h3 {
+.photos-list a h3 {
     text-align: center;
     padding: 15px 0px;
     font-size: 15px;
@@ -359,13 +359,13 @@ h2.photos-text::after {
 	margin:0px;
 	font-family: 'Roboto', sans-serif;
 }
-.work-list a:hover .image-hover
+.photos-list a:hover .image-hover
 {
 	display: block;
 	animation: 0.4s ease-in 0s normal none 1 running imagehover;
 
 }
-.work-space
+.photos-space
 {
 	margin: 20px 0px;
 }
