--- a/style.css
+++ b/style.css
@@ -156,9 +156,9 @@
 {
 	background: rgba(255, 255, 255, 0.3);
 }
-.some-notes
+.about
 {
-	padding: 40px 0px;
+	padding: 40px 60px;
 	float: left;
 }
 .title h2
@@ -178,9 +178,8 @@
 	font-weight: 400;
 	color: #2E2E2E;
 	font-size: 16px;
-	text-align: center;
+	text-align: justify;
 	line-height: 25px;
-
 }
 .desc p a
 {
@@ -392,7 +391,7 @@ h2.photos-text::after {
 }
 .countspace
 {
-		color: white;
+		color: black;
 		text-align: center;
 		width: 100%;
 		float: left;
