reverted changes to bootstrap.css (it is now unchanged from original version, outside of whitespace); moved changes to overriding style in index.html instead

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5046,9 +5046,10 @@ a.badge:focus {
 }
 .thumbnail {
   display: block;
-  padding: 3px;
+  padding: 4px;
+  margin-bottom: 20px;
   line-height: 1.42857143;
-  background-color: #f93;
+  background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: border .2s ease-in-out;
