--- a/style.css
+++ b/style.css
@@ -55,10 +55,10 @@
 {
 	background-attachment:fixed;
 		background-color: #645862;
-		background-image:  url("images/bg.jpg");
+		background-image:  url("images/samus_pe_bg.png");
 		background-position: top center;
 		background-repeat: no-repeat;
-		background-size: cover;
+		background-size: contain;
 		color: white;
 		cursor: default;
 		padding: 180px 0 120px;
@@ -85,12 +85,18 @@
 	-o-animation-fill-mode: forwards;
 	-ms-animation-fill-mode: forwards;
 	animation-fill-mode: forwards;
-	background: rgba(33, 42, 63, 0.5);
-	color: white;
+	/*background: rgba(255, 153, 51, 0.8); */
+	background: rgba(33, 42, 63, 0.7);
+	color: #fff;
 	display: inline-block;
 	opacity: 0;
 	padding: 20px 40px;
 	text-align: center;
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
 
 }
 .text-box
@@ -108,9 +114,8 @@
 {
 	font-size: 45px;
 	font-weight: 700;
-	color: #fff;
-	border-bottom: 7px double #fa3447;
-	border-top: 7px double #fa3447;
+	border-bottom: 7px solid #fff;
+	border-top: 7px solid #fff;
 	text-transform: uppercase;
 	line-height: 1.5;
 	font-family: 'Roboto', sans-serif;
@@ -188,7 +193,7 @@
 }
 .register
 {
-	background: #8ab839;
+	background: #b0e2ff;
 	padding: 60px 0px;
 }
 .register-text
@@ -204,7 +209,7 @@ h2.register-text::after {
     margin: 17px auto 0px;
     width: 80px;
     height: 1px;
-    background: #FFF none repeat scroll 0% 0%;
+    background: #000 none repeat scroll 0% 0%;
     content: "";
 }
 
@@ -385,7 +390,7 @@ h2.photos-text::after {
 .countbg
 {
 	background: rgba(33, 42, 63, 1);
-	padding: 80px 0px;
+	padding: 10px 0px;
 	width: 100%;
 	float: left;
 }
@@ -404,14 +409,14 @@ h2.photos-text::after {
 .counter-item i
 {
 	font-size: 40px;
-	color: #8ab839;
+	color: #555;
 }
 .timer
 {
 	margin-top: 5px;
 	font-weight: 700;
 	font-size: 50px;
-	color: #8ab839;
+	color: #555;
 }
 .counter-item h5
 {
@@ -440,7 +445,7 @@ h2.contact-text::after {
     margin: 17px auto 0px;
     width: 80px;
     height: 1px;
-    background: #8ab839 none repeat scroll 0% 0%;
+    background: #000 none repeat scroll 0% 0%;
     content: "";
 }
 .contact-form, .address-space
