minor layout changes; trying out centered text rather than justified (may look better on mobile)

--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@
 	font-weight: 400;
 	color: #2E2E2E;
 	font-size: 16px;
-	text-align: justify;
+	text-align:center;
 	line-height: 25px;
 }
 .desc p a
