--- a/style.css
+++ b/style.css
@@ -522,7 +522,7 @@ input[placeholder], [placeholder], *[placeholder] {
     font-size: 29px;}
     .desc p {
     font-size: 15px;
-    text-align: justify;}
+    text-align: center;} /* justify */
     .icon-text-box h4 {
     text-align: center;
 }
@@ -554,7 +554,7 @@ input[placeholder], [placeholder], *[placeholder] {
     font-size: 29px;}
     .desc p {
     font-size: 15px;
-    text-align: justify;}
+    text-align: center;} /* justify */
     .icon-text-box h4 {
     text-align: center;
 }
